Quelques corrections sur le modele